# algebraische-zahlentheorie

./: README.md  buchstaben.tex  dran-denken.txt  konzentrieren.tex  magie.tex  uebblatt.cls  uebung01.tex  uebung02.tex  uebung03.tex  uebung04.tex  uebung05.tex  uebung06.tex  uebung07.tex  uebung08.tex  uebung09.tex  uebung10.tex  uebung11.tex  uebung12.tex  uebung13.tex
leaderboard/: Main.hs  MyHamlet.hs  leaderboard.cabal  leaderboard.txt.gpg  push-leaderboard.sh
