name:               leaderboard
version:            0.0.1
build-type:         Simple
cabal-version:      >= 1.10
license:            OtherLicense

executable Main
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , shakespeare >= 2.0
                  , blaze-html >= 0.7
  ghc-options:      -Wall
  default-language: Haskell2010
